<resources>
    <string name="app_name">Spotter</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_user_profile">Profile</string>

    <!-- fragment_login.xml / fragment_login.xml -->
    <string name="title_login">Login</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="hint_username">Type username here…</string>
    <string name="login">Login</string>
    <string name="text_to_signup">Don\'t have account yet?</string>
    <string name="signup">Signup</string>

    <string name="title_registration">Registration</string>
    <string name="label_email">Email:</string>
    <string name="hint_email">Type email here…</string>
    <string name="label_repeat_password">Repeat password:</string>
    <string name="text_to_login">Already have and account?</string>

    <string name="error_email_empty">Email can\'t be empty</string>
    <string name="error_username_empty">Username can\'t be empty</string>
    <string name="error_password_empty">Password can\'t be empty</string>
    <string name="error_passwords_not_matching">Passwords must be matching!</string>
    <string name="error_unable_to_connect_to_server">Unable to connect to server :(</string>
    <string name="error_failed_login">Wrong username or password!</string>
    <string name="user_w_username_exists">User with that username already exists!</string>

    <!-- fragment_add_event.xml / fragment_update_event.xml -->
    <string name="title_add_event">Create Event</string>

    <string name="name_label">Name:</string>
    <string name="description_label">Description:</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="location_label">Location:</string>
    <string name="activity_label">Activity:</string>

    <string name="name_hint">Event Name</string>
    <string name="description_hint">Event Description</string>
    <string name="date_hint">Event Date</string>
    <string name="time_hint">Event Time</string>
    <string name="location_hint">Event Location</string>
    <string name="activity_hint">Event Activity</string>

    <string name="create_event">Create Event</string>
    <string name="update_event">Update Event</string>

    <string name="error_failed_create_event">Failed to create the event!</string>
    <string name="error_empty_field">This field can not be empty</string>

    <string name="select_location_label">Select location</string>
    <string name="select">Select</string>
    <string name="edit_event_title">Edit event</string>
    <string name="change_location">CHANGE LOCATION</string>
    <string name="failed_to_delete_event">Failed to delete event :(</string>

    <string name="delete_item">Delete item</string>
    <string name="delete_item_question">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- fragment_list_events.xml -->
    <string name="btn_add">POST +</string>
    <string name="no_events_to_display">No events to display</string>

    <!-- fagment_home.xml -->
    <string name="btn_take_photo">PHOTO</string>

    <string name="predicted_count">Spectators: %d</string>
    <string name="estimated_count">Estimated count of people on the image is %d</string>
    <string name="retake">RETAKE</string>
    <string name="error_ai">Request failed :(</string>
    <string name="uploading">UPLOADING…</string>
    <string name="success">SUCCESS</string>
    <string name="failed">FAILED</string>
    <string name="camera_permission_required">Camera permission is required</string>

    <string name="username_not_loaded">Username not loaded</string>
    <string name="email_not_loaded">Email not loaded</string>

    <string name="none">None</string>

    <string name="category">Category:</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>

    <!-- fragment_event.xml -->
    <string name="subscribe">SUBSCRIBE</string>

    <!-- fragment_img_ai.xml -->
    <string name="take_photo">TAKE PHOTO</string>
    <string name="ai_description">Take a picture and AI will estimate the popularity of the event!</string>
    <string name="seem_ok">SEEM OK</string>

    <!-- fragment_user_profile.xml -->
    <string name="preferences">Preferences</string>
    <string name="select_theme">Select Theme</string>
    <string name="select_language">Select Language</string>
    <string name="logout">LOGOUT</string>

    <string name="english">English</string>
    <string name="slovenian">Slovenian</string>
    <string name="german">German</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simulator">Simulator</string>
    <string name="start_simulation">Start simulation</string>
    <string name="stop_simulation">Stop Simulation</string>
    <string name="start_football_simulation">Start Football Simulation</string>
    <string name="start_handball_simulation">Start Handball Simulation</string>
    <string name="stop_simulations">Stop Simulations</string>

</resources>